syntax = "proto3";

package main;

option go_package = "./proto";

// 添加用户登录状态
message AddMemberLoginStatusReq {
  int64 id = 1; //主键，自增
  int64 member_id = 2; //用户唯一标识符，外键关联用户表
  string client = 3; //客户端
  string login_ip = 4; //用户最近一次登录的IP地址
  string login_region = 5; //用户最近一次登录的地理位置
  string login_os = 6; //用户最近一次登录的操作系统
  string login_at = 7; //用户最近一次登录的时间戳
  string logout_at = 8; //用户最近一次登出的时间戳
}

message AddMemberLoginStatusResp {
  int32 code = 1;
  string message = 2;
}

// 删除用户登录状态
message DeleteMemberLoginStatusReq {
  repeated int64 ids = 1;
}

message DeleteMemberLoginStatusResp {
  int32 code = 1;
  string message = 2;
}

// 更新用户登录状态
message UpdateMemberLoginStatusReq {
  int64 id = 1; //主键，自增
  int64 member_id = 2; //用户唯一标识符，外键关联用户表
  string client = 3; //客户端
  string login_ip = 4; //用户最近一次登录的IP地址
  string login_region = 5; //用户最近一次登录的地理位置
  string login_os = 6; //用户最近一次登录的操作系统
  string login_at = 7; //用户最近一次登录的时间戳
  string logout_at = 8; //用户最近一次登出的时间戳
}

message UpdateMemberLoginStatusResp {
  int32 code = 1;
  string message = 2;
}

// 更新用户登录状态状态
message UpdateMemberLoginStatusStatusReq {

}

message UpdateMemberLoginStatusStatusResp {
  int32 code = 1;
  string message = 2;
}

// 查询用户登录状态详情
message QueryMemberLoginStatusDetailReq {
  int64 id = 1;
}

message QueryMemberLoginStatusDetailResp {
  int64 id = 1; //主键，自增
  int64 member_id = 2; //用户唯一标识符，外键关联用户表
  string client = 3; //客户端
  string login_ip = 4; //用户最近一次登录的IP地址
  string login_region = 5; //用户最近一次登录的地理位置
  string login_os = 6; //用户最近一次登录的操作系统
  string login_at = 7; //用户最近一次登录的时间戳
  string logout_at = 8; //用户最近一次登出的时间戳
}

// 分页查询用户登录状态列表
message QueryPageMemberLoginStatusListReq {
  int64 id = 1; //主键，自增
  int64 member_id = 2; //用户唯一标识符，外键关联用户表
  string client = 3; //客户端
  string login_ip = 4; //用户最近一次登录的IP地址
  string login_region = 5; //用户最近一次登录的地理位置
  string login_os = 6; //用户最近一次登录的操作系统
  string login_at = 7; //用户最近一次登录的时间戳
  string logout_at = 8; //用户最近一次登出的时间戳
  int64 page_num = 9; //第几页
  int64 page_size = 10; //每页的数量
}

message PageMemberLoginStatusListData {
  int64 id = 1; //主键，自增
  int64 member_id = 2; //用户唯一标识符，外键关联用户表
  string client = 3; //客户端
  string login_ip = 4; //用户最近一次登录的IP地址
  string login_region = 5; //用户最近一次登录的地理位置
  string login_os = 6; //用户最近一次登录的操作系统
  string login_at = 7; //用户最近一次登录的时间戳
  string logout_at = 8; //用户最近一次登出的时间戳
}

message QueryPageMemberLoginStatusListResp {
  int64 total = 1;
  repeated  PageMemberLoginStatusListData list = 2;
}

// 查询用户登录状态列表
message QueryMemberLoginStatusListReq {
  int64 id = 1; //主键，自增
  int64 member_id = 2; //用户唯一标识符，外键关联用户表
  string client = 3; //客户端
  string login_ip = 4; //用户最近一次登录的IP地址
  string login_region = 5; //用户最近一次登录的地理位置
  string login_os = 6; //用户最近一次登录的操作系统
  string login_at = 7; //用户最近一次登录的时间戳
  string logout_at = 8; //用户最近一次登出的时间戳
}

message MemberLoginStatusListData {
  int64 id = 1; //主键，自增
  int64 member_id = 2; //用户唯一标识符，外键关联用户表
  string client = 3; //客户端
  string login_ip = 4; //用户最近一次登录的IP地址
  string login_region = 5; //用户最近一次登录的地理位置
  string login_os = 6; //用户最近一次登录的操作系统
  string login_at = 7; //用户最近一次登录的时间戳
  string logout_at = 8; //用户最近一次登出的时间戳
}

message QueryMemberLoginStatusListResp {
  repeated  MemberLoginStatusListData list = 1;
}

// 用户登录状态
service MemberLoginStatusService {
  // 添加用户登录状态
  rpc AddMemberLoginStatus(AddMemberLoginStatusReq) returns (AddMemberLoginStatusResp){}
  // 删除用户登录状态
  rpc DeleteMemberLoginStatus(DeleteMemberLoginStatusReq) returns (DeleteMemberLoginStatusResp){}
  // 更新用户登录状态
  rpc UpdateMemberLoginStatus(UpdateMemberLoginStatusReq) returns (UpdateMemberLoginStatusResp){}
  // 更新用户登录状态状态
  rpc UpdateMemberLoginStatusStatus(UpdateMemberLoginStatusStatusReq) returns (UpdateMemberLoginStatusStatusResp){}
  // 查询用户登录状态详情
  rpc QueryMemberLoginStatusDetail(QueryMemberLoginStatusDetailReq) returns (QueryMemberLoginStatusDetailResp){}
  // 查询用户登录状态分页列表
  rpc QueryPageMemberLoginStatusList(QueryPageMemberLoginStatusListReq) returns (QueryPageMemberLoginStatusListResp){}
  // 查询用户登录状态所有列表
  rpc QueryMemberLoginStatusList(QueryMemberLoginStatusListReq) returns (QueryMemberLoginStatusListResp){}

}
